[package]
name = "hook"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
shared = { version = "0.1.0", path = "../shared" }
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
tracing-tunnel = { version = "0.1.0", features = ["sender"] }
windows = { version = "0.62", features = ["Win32_Foundation", "Win32_UI_WindowsAndMessaging", "Win32_Graphics_Gdi", "Win32_System_LibraryLoader", "Win32_UI_Shell", "Win32_System_Memory", "Win32_System_Threading"] }
